grammar/grammar.js
    source_file: $ => choice(
      prec(3, $.full_document),    // complete @UTF8...@Begin...@End file
      prec(2, $.utterance),        // main tier + dependent tiers (no document headers)
      prec(1, $.main_tier),        // single *SPEAKER:\tcontent terminator
      prec(1, $.dependent_tier),   // single %tier:\tcontent
      prec(1, $.header),           // single @Header:\tcontent
      prec(1, $.pre_begin_header), // @PID, @Font, @Window, @Color words
      prec(0, $.standalone_word),  // single word token (for fragment parsing)
    ),

    // Full CHAT document structure:
    // 1. @UTF8 (required, must be first non-whitespace content)
    // 2. Optional pre-@Begin headers (@PID, @Color words, @Window, @Font)
    // 3. @Begin (effectively required, but optional for lenient parsing)
    // 4. Main content headers and utterances
    // 5. @End (effectively required, but optional for lenient parsing)
    full_document: $ => seq(
      $.utf8_header,

      // Optional headers that can appear before @Begin
      // From Java grammar: pid? colorWords? window? font? BEG
      repeat($.pre_begin_header),

      $.begin_header,

      // Main content: headers and utterances after @Begin
      repeat($.line),

      $.end_header
    ),

    // DESIGN DECISION: Pre-@Begin header order is lenient (choice, not seq)
    // The ANTLR grammar enforces strict order: pid? colorWords? window? font? BEG
    // We allow any order because:
    //   1. "Parse, don't validate" - downstream can enforce ordering
    //   2. Real-world files may have non-standard ordering
    //   3. Strict ordering would reject otherwise-parseable files
    // Downstream consumers should validate ordering if required.
    // Reference: ChatJFlexAntlr4Parser.g4 chatPrelude rule
    // The actual headers permitted in this slot are drawn directly from the CLI manual
    // plan for CHAT (#Pre_Begin_Headers), so this rule only enumerates pid, color words,
    // window, and font markers as per the specification.
    newline: $ => /[\r\n]+/,

    star: $ => '*',       // Main tier prefix marker
    hyphen: $ => '-',     // Used in MOR suffixes and other contexts

    space: $ => ' ',
    tab: $ => '\t',

    // Matches all non-newline characters to end of line.
    // Used as a building block for free-text header values and catch-all content.
    text_segment: $ => /[^\u0015\r\n]+/,

    // Media bullet: \u0015START_END\u0015 or \u0015START_END-\u0015 (skip)
    //
    // ONE structured rule used everywhere bullets appear:
    // - `utterance_end` (terminal timing after terminator)
    // - `base_content_item` (inline timing between words)
    // - `text_with_bullets` (dependent tier timing)
    // - `wor_tier_body` (word-level timing)
    //
    // The skip dash (-) before closing NAK is extremely rare (10 occurrences
    // in 99,742 files) but syntactically valid.
    text_with_bullets_and_pics: $ => repeat1(choice(
      $.text_segment,
      $.bullet,
      $.inline_pic,
      $.continuation
    )),

    // Text content with optional inline bullets interspersed (no pics)
    // Format: text [bullet text]* or bullet [text bullet]*
    // Used in: %act, %add, %cod, %eng, %err, %exp, %gpx, %ort, %sit, %tim, %x...
    // Includes continuation lines (\n\t) to handle multi-line tiers
    period: $ => '.',
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#QuestionMark_Terminator
    pipe: $ => '|',
    ampersand: $ => '&',
    less_than: $ => '<',
    greater_than: $ => '>',
    right_brace: $ => '}',
    left_bracket: $ => '[',
    right_bracket: $ => ']',

    // === CODE MARKERS ===
    // Named rules for semantic markers
    plus: $ => '+',
    zero: $ => token(prec(3, '0')),

    // ============================================================================
    // SPECIAL CHARACTER MARKERS (Control Characters & Structural Markers)
    // ============================================================================
    // These are non-printing or special characters used for structural purposes.
    // ============================================================================
    line: $ => choice(
      $.header,
      $.utterance,
      $.unsupported_line,
    ),

    // Catch-all for lines that don't start with *, @, or % — prevents ERROR
    // cascade when junk lines appear in CHAT files.  The Rust parser will
    // report a validation warning and skip these.
    utf8_header: $ => seq(token('@UTF8'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Begin_Header
    // OPTIMIZATION: token('@Begin') reduces states vs seq(at_sign, 'Begin')
    begin_header: $ => seq(token('@Begin'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Languages_Header
    // OPTIMIZATION: token('@Languages') reduces states; whitespace handled by header_sep
    languages_header: $ => seq(
      $.languages_prefix,
      $.header_sep,
      $.languages_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Participants_Header
    // OPTIMIZATION: token('@Participants') reduces states; whitespace handled by header_sep
    participants_header: $ => seq(
      $.participants_prefix,
      $.header_sep,
      $.participants_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#ID_Header
    // OPTIMIZATION: token('@ID') reduces states; whitespace handled by header_sep
    id_header: $ => seq(
      $.id_prefix,
      $.header_sep,
      $.id_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#End_Header
    // OPTIMIZATION: token('@End') reduces states vs seq(at_sign, 'End')
    end_header: $ => seq(token('@End'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Birth_Header
    // ANTLR: birthof: BIRTHOF whoChecked COLON TAB DATE_ALL NEWLINE
    // Birth of takes a specific date format, not free_text
    comment_header: $ => seq($.comment_prefix, $.header_sep, $.text_with_bullets_and_pics, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Date_Header
    utterance: $ => seq(
      $.main_tier,
      repeat($.dependent_tier)
    ),

    // Main tier content after the tab — content is required
    // Used by: main_tier (*SPEAKER:\t)
    // NOTE: No leading/trailing optional(whitespaces) — contents handles its own whitespace
    tier_body: $ => seq(
      field('linkers', optional($.linkers)),
      field('language_code', optional(
        seq(
          $.langcode,
          $.whitespaces
        )
      )),
      field('content', $.contents),
      field('ending', $.utterance_end)
    ),

    // %wor tier body — word-level timing tier.
    // Flat whitespace-separated sequence: words, inline bullets, and separators.
    // Whitespace is always required between items (it's the only separator).
    // The Rust parser pairs words with following inline_bullet by adjacency.
    main_tier: $ => seq(
      $.star,
      field('speaker', $.speaker),
      $.colon,
      $.tab,
      $.tier_body
    ),

    // ANTLR: uend: anyTerminator finalCodes? (NEWLINE | url NEWLINE)
    // finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET (postcode annotations)
    // url: URL milliseconds BULLET_UNDERSCORE milliseconds (BULLET_URL | BULLET_URL_SKIP)
    // Utterance ending: terminator + postcodes + media bullet + newline
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Utterance_Terminator
    // NOTE: Space before terminator is consumed by contents rule's trailing whitespace.
    // Space before media_url and trailing whitespace must be handled here (post-terminator).
    utterance_end: $ => seq(
      // Terminator section - optional in CA transcription mode
      optional($.terminator),
      // Postcode annotations: [+ bch], [+ foo], etc.
      optional($.final_codes),
      // Optional media bullet — appears AFTER terminator in CHAT text.
      // Uses the unified `bullet` rule (structured, not opaque).
      optional(seq(optional($.whitespaces), $.bullet)),
      optional($.whitespaces),  // Allow trailing whitespace before newline
      $.newline
    ),

    // ANTLR: finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET
    // SSEXT = "[+ " so finalCode is postcode annotations like [+ bch], [+ foo]
    // Note: SSEXT includes the space, so no additional space needed before each annotation
    // But there can be spaces between multiple postcode annotations
    base_content_item: $ => choice(
      $.underline_begin,
      $.underline_end,
      $.pause_token,
      $.word_with_optional_annotations,
      $.nonword_with_optional_annotations,
      $.other_spoken_event,
      $.long_feature,
      $.nonvocal,
      $.freecode,
      $.bullet,
    ),

    // Separator is its own first-class content item (not attached to preceding content)
    // Uses named leaf nodes for type-safe node dispatch
    separator: $ => prec(-1, choice(
      $.non_colon_separator,
      $.colon,
    )),

    // ============================================================================
    // INTONATION & SPECIAL MARKERS
    // ============================================================================
    // Markers for tagging, vocatives, and CA intonation contours
    // Reference: https://talkbank.org/0info/manuals/CA.html
    // ============================================================================

    // Tag and vocative markers
    // All Unicode separator/marker tokens use prec(10) to beat standalone_word prec(5)
    // when both match a single Unicode character at the same position.
    content_item: $ => choice(
      $.base_content_item,
      $.group_with_annotations,
      $.quotation,
      $.main_pho_group,
      $.main_sin_group,
    ),

    // Other speaker's speech event, e.g., &*MOT:word — speech attributed to another speaker.
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Local_Event
    retrace_partial: $ => token('[/]'),
    contents: $ => repeat1(choice(
      $.whitespaces,
      $.content_item,
      $.separator,
      $.overlap_point,
    )),

    // NOTE: No optional whitespace wrappers — contents handles its own whitespace
    word_with_optional_annotations: $ => seq(
      field('word', $.standalone_word),
      optional(seq(
        optional($.whitespaces),
        field('replacement', $.replacement)
      )),
      field('annotations', optional($.base_annotations))
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Group_Scopes
    // Group with annotations: <content> [annotation]
    // Groups MUST have annotations - cannot be standalone (ANTLR: annotatedGroup)
    // Example: <I dunno> [?] - uncertain transcription of phrase
    // NOTE: No optional whitespace wrappers — contents handles its own whitespace
    standalone_word: $ => prec.right(6, seq(
      optional(choice($.word_prefix, $.zero)),
      $.word_body,
      optional($.form_marker),
      optional($.word_lang_suffix),
      optional($.pos_tag),
    )),

    _word_marker: $ => choice(
      $.lengthening,
      $.overlap_point,
      $.ca_element,
      $.ca_delimiter,
      $.underline_begin,
      $.underline_end,
      $.syllable_pause,
      $.tilde,
      '+',  // compound marker
    ),

    word_body: $ => prec.right(choice(
      // Standard start: text, shortening, or stress, then optional continuation
      seq(
        choice($.word_segment, $.shortening, $.stress_marker),
        repeat(choice($.word_segment, $.shortening, $.stress_marker, $._word_marker)),
      ),
      // Marker-initial: ⌈hello⌉, °hello°, °↑hello°, °°hello°° — one or more
      // structural markers MUST be followed by text content (prevents standalone
      // markers from forming degenerate words). Multiple markers allow stacked CA
      // notation: °↑ (piano + pitch up), °° (pianissimo), ⌈° (overlap + piano).
      seq(
        repeat1(choice($.overlap_point, $.ca_element, $.ca_delimiter, $.underline_begin)),
        choice($.word_segment, $.shortening, $.stress_marker),
        repeat(choice($.word_segment, $.shortening, $.stress_marker, $._word_marker)),
      ),
    )),

    // CA elements: individual markers within words (pitch, articulation, etc.)
    // Built from symbol registry CA_ELEMENT_SYMBOLS
    word_segment: $ => token(prec(5, seq(
      WORD_SEGMENT_FIRST_RE,
      WORD_SEGMENT_REST_RE,
    ))),

    form_marker: $ => token.immediate(
      /@(?:s[a-zA-Z][-a-zA-Z]*|[a-rt-zA-RT-Z][-a-zA-Z]*)(?::[a-zA-Z0-9_]+)?/
    ),
    // Language suffix: @s or @s:eng or @s:eng+zho+fra or @s:eng&zho&fra
    // Single immediate token to prevent colon/& from being consumed by other rules.
    word_lang_suffix: $ => token.immediate(
      /@s(?::[a-z]{2,3}(?:[+&][a-z]{2,3})*)?/
    ),

    // POS tag: $n, $v, $adj, etc.
    mor_dependent_tier: $ => seq(
      $.mor_tier_prefix,
      $.tier_sep,
      $.mor_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Phonology_Tier
    gra_dependent_tier: $ => seq(
      $.gra_tier_prefix,
      $.tier_sep,
      $.gra_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Orthography_Tier
    // Tiers that can contain text with inline bullets
    colon: $ => ':',

    // Chat.flex: WHO = [A-Za-z0-9_\'+\-]+ (exact match)
    speaker: $ => /[A-Za-z0-9_\'+\-]+/, 

    // ============================================================================
    // MORPHOLOGY (MOR) TIER INTERNALS
    // ============================================================================
    // The %mor tier contains UD-style morphological analysis aligned word-by-word
    // with the main tier. Each MOR word has this structure:
    //
    //   POS|lemma[-Feature]*
    //
    // Words can be connected by post-clitics (MWT expansions from Stanza):
    //   - Post-clitics: ~word  (e.g., pron|I~aux|be-Fin-Ind-Pres-S1)
    //
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Morphological_Tier
    // ============================================================================

    // Can have zero content with only terminator.
    // Terminator is optional - aligner validates matching with main tier.
    mor_contents: $ => seq(
      choice(
        // Pattern 1: Items with optional terminator
        seq(
          $.mor_content,                              // First item (required)
          repeat(seq($.whitespaces, $.mor_content)),  // Additional items
          optional(seq($.whitespaces, $.terminator))  // Optional terminator
        ),
        // Pattern 2: Just terminator (e.g., "%mor:\t.")
        $.terminator
      ),
      optional($.whitespaces)  // Trailing whitespace before newline
    ),

    // MOR content: main word + optional post-clitics (NO pre-clitics, NO translation)
    mor_content: $ => seq(
      field('main', $.mor_word),
      field('post_clitics', repeat($.mor_post_clitic))
    ),

    // morPostClitic = TILDE morWord
    mor_word: $ => seq(
      $.mor_pos,                  // UPOS tag (simple identifier)
      $.pipe,                     // |
      $.mor_lemma,                // lemma (opaque Unicode string)
      repeat($.mor_feature)       // -Feature chains
    ),

    // POS tag — allows colons for subcategories (pro:sub, v:aux, det:art, n:prop).
    // POS subcategories are fundamental in CHAT — CLAN's MOR generates them by default.
    // Allows: Unicode letters, digits, colon (subcategory separator)
    // Excludes: | - ~ + . ? ! # $ @ % = & , [ ] < > ( ) space
    mor_lemma: $ => /[^\.\?\!\|\+~\$#@%=&\[\]<>()\-\s\r\n\u201C\u201D][^\.\?\|\+~\-\s\r\n]*/,

    // Feature: -Value (commas allowed within value, e.g., -Int,Rel)
    gra_relation: $ => seq(
      field('index', $.gra_index),
      $.pipe,
      field('head', $.gra_head),
      $.pipe,
      field('relation', $.gra_relation_name)
    ),
